Headless Parallel executtion update v1